--- a/pages/about.html
+++ b/pages/about.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/pages/about.css">
-    <!-- <link rel="stylesheet" href="/pages/navbar.css"> -->
+    <link rel="stylesheet" href="/pages/navbar.css">
     <link rel="stylesheet" href="/pages/fonts.css">
-    <link rel="stylesheet" href="style.css">
-     
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="/pages/buttons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  </head>
+    <link rel="stylesheet" href="/pages/about.css">
+
+</head>
 
 
 <body>
@@ -59,11 +59,106 @@
       </header>
 </section>
 
+<section>
+  <div class="about-us">
+    <div class="about-us-text">
+    <h1>About Us</h1>
+    <p>At our company, we take pride in sourcing our tallow from a locally raised, family-owned farm where cows are pasture-raised with the utmost care. By choosing ethically and sustainably farmed beef fat, we ensure that our tallow is of the highest quality, rich in essential nutrients, and crafted with a focus on purity and health benefits. Our meticulous rendering process involves using distilled water and natural sea salt to effectively remove impurities, allowing us to create a clean, premium product that stands out in the market. We believe that the best ingredients come from responsible farming practices, which is why we are committed to working with farms that uphold the highest standards of animal welfare and environmental sustainability. Whether used for skincare, cooking, or other natural applications, our tallow is a testament to quality craftsmanship and a dedication to providing only the best for our customers.</p>
+  </div>
+  </div>
+  </section>
+
 <!-- SLIDER -->
 <section>
-
-
+  <div class="how-to-do">
+  <h1>How to do the Cooking Tallow</h1>
+  <div class="wrapper">
+  
+    <div class="box">
+      <h3 class="heading">Step 1</h3>
+      <div class="progress-bar">
+        <div class="bg-bar"></div>
+        <div class="active-bar"></div>
+      </div>
+      <div class="circle-container">
+        <img src="/components/icones/suet.png" alt="Step 1 Image" height="40px" width="40px">
+        <h4>Prepare the Fat</h4>
+        <p>Trim any remaining meat or blood spots from the suet.
+          Cut the fat into small chunks.</p>
+      </div>
+    </div>
+    
+    <div class="box">
+      <h3 class="heading">Step 2</h3>
+      <div class="progress-bar">
+        <div class="bg-bar"></div>
+        <div class="active-bar"></div>
+      </div>
+      <div class="circle-container">
+        <img src="/components/icones/boiling-water.png" alt="Step 2 Image">
+        <h4>Boil with Water</h4>
+        <p>Place the fat in a large pot and add enough water to cover it.
+          Bring to a low boil, then reduce to a gentle simmer.</p>
+      </div>
+    </div>
+  
+    <div class="box">
+      <h3 class="heading">Step 3</h3>
+      <div class="progress-bar">
+        <div class="bg-bar"></div>
+        <div class="active-bar"></div>
+      </div>
+      <div class="circle-container">
+        <img src="/components/icones/simmer.png" alt="Step 3 Image">
+        <h4>Simmer Until Fat Renders</h4>
+        <p>The fat will slowly melt, and impurities will separate.
+          After 1-2 hours, the fat will liquefy, and the remaining tissue will float or sink.</p>
+      </div>
+      </div>
+  
+    <div class="box">
+      <h3 class="heading">Step 4</h3>
+      <div class="progress-bar">
+        <div class="bg-bar"></div>
+        <div class="active-bar"></div>
+      </div>
+      <div class="circle-container">
+        <img src="/components/icones/strain.png" alt="Step 4 Image">
+        <h4>Strain the Liquid Fat</h4>
+        <p>Carefully pour the mixture through a fine strainer or cheesecloth into a heatproof bowl.
+          Discard the leftover cracklings.</p>
+      </div>
+    </div>
+  
+    <div class="box">
+      <h3 class="heading">Step 5</h3>
+      <div class="progress-bar">
+        <div class="bg-bar"></div>
+        <div class="active-bar"></div>
+      </div>
+      <div class="circle-container">
+        <img src="/components/icones/cooling.png" alt="Step 5 Image">
+        <h4>Separate & Cool</h4>
+        <p>Let the strained liquid sit; the tallow will rise to the top as it cools.
+          Once solidified, lift off the tallow block (discard the water underneath).</p>
+      </div>
+      </div>
+  
+    <div class="box">
+      <h3 class="heading">Step 6</h3>
+      <div class="progress-bar">
+        <div class="bg-bar"></div>
+        <div class="active-bar"></div>
+      </div>
+      <div class="circle-container">
+        <img src="/components/icones/glass-jar.png" alt="Step 6 Image">
+        <h4>Store Properly</h4>
+        <p>Transfer to glass jars and store in the fridge (lasts months) or freezer (years)..</p>
+      </div>
+    </div>
+  </div>
+</div>
 </section>
-<script src="/app.js"></script>
+
 </body>
 </html>
