--- a/pages/about.html
+++ b/pages/about.html
@@ -67,11 +67,35 @@
   </div>
   </div>
   </section>
+</section>
+
+<section>
+  <div class="slogans-container">
+    <div class="slogan">
+      <img src="/components/icones/family-company.png" alt="Family run company">
+      <h1>Family Owned</h1>
+      <p>A tradition of quality passed down through generations</p>
+    </div>
+    
+    <div class="slogan">
+      <img src="/components/icones/local-product.png" alt="Local Product">
+      <h1>Locally Made</h1>
+      <p>Proudly crafted in our community with local ingredients</p>
+    </div>
+    
+    <div class="slogan">
+      <img src="/components/icones/environmentally-friendly.png" alt="Environmentally Friendly">
+      <h1>Eco-Friendly</h1>
+      <p>Sustainable practices that protect our planet</p>
+    </div>
+  </div>
+
+</section>
 
 <!-- SLIDER -->
 <section>
   <div class="how-to-do">
-  <h1>How to do the Cooking Tallow</h1>
+  <h1>How We Craft Our Cooking Tallow </h1>
   <div class="wrapper">
   
     <div class="box">
