fixing the links

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
               </a>
             </li>
             <li class="menu-item">
-              <a href="#" class="menu-link">
+              <a href="/pages/about.html" class="menu-link">
                 <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
-                <img src="/components/icones/products.png" alt="ABOUT US" class="menu-icon">
+                <img src="#" alt="ABOUT US" class="menu-icon">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
               </a>
             </li>
@@ -69,9 +69,9 @@
       <p>Discover the Benefits of Cooking with Our Organic Tallow: Sourced from Pasture-Raised Beef, High Smoke Point for Versatile Cooking, and Packed with Health-Promoting Nutrients!</p>
       <div class="two-buttons">
         <!-- Button One  -->
-        <div class="btn btn-one">
+        <a class="btn btn-one" href="./pages/contact.html">
           <span><h4>OUR LOCATION</h4></span>
-        </div>
+        </a>
         
         <!-- Button Two  -->
         <div class="btn">
@@ -157,9 +157,9 @@
             <h4>WE ARE OPEN EVERY SINGLE DAY</h4>
             <h1>WE OPEN THE DOORS EVERYDAY AT 9:00. COME SAY HELLO!</h1>
             <p>Our friendly team is here to welcome you with a smile every day at 9:00! Whether you're picking up tallow or just stopping by, we’re happy to help, share tips, or chat about our products. Come say hello, we’d love to meet you!</p>
-            <div class="btn">
+            <a class="btn" href="./pages/contact.html">
               <button class="button-two"><h4>CONTACT</h4></button>
-            </div>
+            </a>
         </div>
         <div class="bedge-image-left">
             <img src="/components/photos/queue-tallow-shp.JPG" alt="Health Promoting Nutrients">
@@ -177,7 +177,7 @@
         <p>Pop in daily from 9am to explore our premium wet-rendered tallow. Our friendly team's here to help with cooking tips, or just a chat. See you soon!</p>
         <div class="buttons">
             <button class="btn primary">01257 271917</button>
-            <button class="btn primary">Find Us On Map</button>
+            <a class="btn primary" href="./pages/contact.html">Find Us On Map</a>
         </div>
     </div>
 </div>
@@ -203,7 +203,7 @@
         <div class="footer-section">
             <h3>MENU</h3>
             <p><a href="/index.html">HOME</a></p>
-            <p><a href="#">ABOUT US</a></p>
+            <p><a href="/pages/about.html">ABOUT US</a></p>
             <p><a href="#">PRODUCTS</a></p>
             <p><a href="/pages/contact.html">CONTACT</a></p>
             <br>
