--- a/pages/contact.html
+++ b/pages/contact.html
@@ -147,16 +147,16 @@
 
         <div class="footer-section">
             <h3>MENU</h3>
-            <p><a href="#">HOME</a></p>
-            <p><a href="#">ABOUT US</a></p>
+            <p><a href="/index.html">HOME</a></p>
+            <p><a href="/pages/about.html">ABOUT US</a></p>
             <p><a href="#">PRODUCTS</a></p>
-            <p><a href="#">CONTACT</a></p>
+            <p><a href="/pages/contact.html">CONTACT</a></p>
             <br>
             <h3>ON SOCIAL MEDIA:</h3>
           <div class="social-icons">
-              <a href="#"><i class="fab fa-facebook-f fa-1.5x"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61569199092253"><i class="fab fa-facebook-f fa-1.5x"></i></a>
               <a href="#"><i class="fab fa-instagram fa-1.5x"></i></a>
-              <a href="#"><i class="fab fa-youtube fa-1.5x"></i></a>
+              <a href="#"><i class="fab fa-tiktok fa-1.5x"></i></a>
           </div>
         </div>
 
