--- a/pages/about.html
+++ b/pages/about.html
@@ -35,7 +35,7 @@
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="#" class="menu-link is-active">
+                  <a href="/pages/about.html" class="menu-link is-active">
                     <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
                     <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
                   </a>
@@ -47,7 +47,7 @@
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="#" class="menu-link">
+                  <a href="/pages/contact.html" class="menu-link">
                     <img src="/components/icones/location.png" alt="CONTACT/LOCATION" class="menu-icon">
                     <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
                   </a>
@@ -202,7 +202,7 @@
         <div class="footer-section">
             <h3>MENU</h3>
             <p><a href="/index.html">HOME</a></p>
-            <p><a href="#">ABOUT US</a></p>
+            <p><a href="/pages/about.html">ABOUT US</a></p>
             <p><a href="#">PRODUCTS</a></p>
             <p><a href="/pages/contact.html">CONTACT</a></p>
             <br>
