--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,7 +34,7 @@
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="#" class="menu-link">
+                      <a href="/pages/about.html" class="menu-link">
                         <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
                       </a>
