--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
-                <img src="#" alt="ABOUT US" class="menu-icon">
+                <img src="/components/icones/products.png" alt="ABOUT US" class="menu-icon">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
               </a>
             </li>
