deleting sign from iframe

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -67,7 +67,7 @@
         <div class="contact-items">
           <div class="contact-map"> 
             <!-- GOOGLE MAP -->
-            <<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2364.340811693411!2d-2.6217963228507952!3d53.65872507238158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487b0c668ea8d25b%3A0xb58046f2b8fac4a4!2sMonkey%20Mist!5e0!3m2!1sen!2suk!4v1743201533166!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2364.340811693411!2d-2.6217963228507952!3d53.65872507238158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487b0c668ea8d25b%3A0xb58046f2b8fac4a4!2sMonkey%20Mist!5e0!3m2!1sen!2suk!4v1743201533166!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div class="contact-info-add"> 
             
