fixing the website issues

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
       
       <div class="figure-item">
         <figure class="image-block">
-          <h1>PASTURASED BEEF</h1>
-          <img src="./components/photos/pastured-rasied-beef.jpeg" alt="Pastured Rasied Beef">
+          <h1>PASTEURISED BEEF</h1>
+          <img src="./components/photos/pastured-rasied-beef.jpeg" alt="Pastured Beef">
           <figcaption>
             <h3>More Info</h3>
             <p>Raised Naturally, Nourished Sustainably. Our cattle graze on local open pastures, ensuring the highest quality, nutrient-rich beef. Taste the difference of truly ethical and wholesome farming!</p>
