--- a/pages/about.html
+++ b/pages/about.html
@@ -105,7 +105,7 @@
         <div class="active-bar"></div>
       </div>
       <div class="circle-container">
-        <img src="/components/icones/suet.png" alt="Step 1 Image" height="40px" width="40px">
+        <img src="/components/icones/suet.png" alt="Step 1" height="40px" width="40px">
         <h4>Prepare the Fat</h4>
         <p>Trim any remaining meat or blood spots from the suet.
           Cut the fat into small chunks.</p>
@@ -119,7 +119,7 @@
         <div class="active-bar"></div>
       </div>
       <div class="circle-container">
-        <img src="/components/icones/boiling-water.png" alt="Step 2 Image">
+        <img src="/components/icones/boiling-water.png" alt="Step 2">
         <h4>Boil with Water</h4>
         <p>Place the fat in a large pot and add enough water to cover it.
           Bring to a low boil, then reduce to a gentle simmer.</p>
@@ -133,7 +133,7 @@
         <div class="active-bar"></div>
       </div>
       <div class="circle-container">
-        <img src="/components/icones/simmer.png" alt="Step 3 Image">
+        <img src="/components/icones/simmer.png" alt="Step 3">
         <h4>Simmer Until Fat Renders</h4>
         <p>The fat will slowly melt, and impurities will separate.
           After 1-2 hours, the fat will liquefy, and the remaining tissue will float or sink.</p>
@@ -147,7 +147,7 @@
         <div class="active-bar"></div>
       </div>
       <div class="circle-container">
-        <img src="/components/icones/strain.png" alt="Step 4 Image">
+        <img src="/components/icones/strain.png" alt="Step 4">
         <h4>Strain the Liquid Fat</h4>
         <p>Carefully pour the mixture through a fine strainer or cheesecloth into a heatproof bowl.
           Discard the leftover cracklings.</p>
@@ -161,7 +161,7 @@
         <div class="active-bar"></div>
       </div>
       <div class="circle-container">
-        <img src="/components/icones/cooling.png" alt="Step 5 Image">
+        <img src="/components/icones/cooling.png" alt="Step 5">
         <h4>Separate & Cool</h4>
         <p>Let the strained liquid sit; the tallow will rise to the top as it cools.
           Once solidified, lift off the tallow block (discard the water underneath).</p>
@@ -175,7 +175,7 @@
         <div class="active-bar"></div>
       </div>
       <div class="circle-container">
-        <img src="/components/icones/glass-jar.png" alt="Step 6 Image">
+        <img src="/components/icones/glass-jar.png" alt="Step 6">
         <h4>Store Properly</h4>
         <p>Transfer to glass jars and store in the fridge (lasts months) or freezer (years)..</p>
       </div>
