--- a/pages/contact.html
+++ b/pages/contact.html
@@ -120,14 +120,14 @@
         </select>
       </div>
       <div class="message">
-        <label for="message"></label>
+        <label for="message"></label> 
         <textarea name="message" placeholder="I'd like to chat about" id="message_input" cols="30" rows="5" required></textarea>
       </div>
       <div class="submit">
         <input type="submit" value="Send Message" id="form_button" />
       </div>
-    </form><!-- // End form -->
-  </div><!-- // End #container -->
+    </form>
+  </div>
 </section>
 <section>
   <footer>
