--- a/pages/products.html
+++ b/pages/products.html
@@ -59,6 +59,54 @@
 
 
 
+<section>
+  <footer>
+    <div class="footer-container">
+        <div class="footer-section">
+            <h3>OPENING HOURS</h3>
+            <p><span>MONDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>TUESDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>WEDNESDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>THURSDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>FRIDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>SATURDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>SUNDAY</span> <span>10:00 - 16:00</span></p>
+        </div>
+
+
+
+        <div class="footer-section">
+            <h3>MENU</h3>
+            <p><a href="/index.html">HOME</a></p>
+            <p><a href="/pages/about.html">ABOUT US</a></p>
+            <p><a href="#">PRODUCTS</a></p>
+            <p><a href="/pages/contact.html">CONTACT</a></p>
+            <br>
+            <h3>ON SOCIAL MEDIA:</h3>
+          <div class="social-icons">
+              <a href="https://www.facebook.com/profile.php?id=61569199092253"><i class="fab fa-facebook-f fa-1.5x"></i></a>
+              <a href="#"><i class="fab fa-instagram fa-1.5x"></i></a>
+              <a href="#"><i class="fab fa-tiktok fa-1.5x"></i></a>
+          </div>
+        </div>
+
+        <div class="footer-section">
+            <h3>CONTACT US</h3>
+            <p><strong>PHONE:</strong> 01257 271917</p>
+            <p><strong>E-MAIL:</strong> <a href="mailto:tallowlancashire">tallow@gmail.com</a></p>
+            <br>
+            <h3>LOCATION</h3>
+            <p> 275 Eaves Ln<br> Chorley PR6 0EY</p>
+
+
+            </div>
+          </div>         
+    </div>
+    <div class="footer-bottom">
+        <p>© 2025 Tallow Lancashire Co</p>
+    </div>
+</footer>
+</section>
     <script src="/app.js"></script>
 </body>
 </html>
