--- a/pages/about.html
+++ b/pages/about.html
@@ -29,7 +29,7 @@
               <ul class="menu-list">
     
                 <li class="menu-item">
-                  <a href="../index.html" class=>
+                  <a href="../index.html" class="menu-link">
                     <img src="/components/icones/home.png" alt="Home" class="menu-icon">
                     <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Home</span>
                   </a>
