about more informations

--- a/pages/about.html
+++ b/pages/about.html
@@ -183,6 +183,59 @@
   </div>
 </div>
 </section>
+
+<section>
+  <section>
+    <div class="bedge-section">
+      <div class="bedge-right">
+          <div class="bedge-text-right">
+            <h4>EXPLORE OUR STORE, FIND THE BEST COOKING TALLOW!</h4>
+              <h1>CHECK OUT AVAILABLE PRODUCTS!</h1>
+              <p>Pure, nutrient-rich beef tallow, slow-rendered the traditional wet way for superior quality and flavor. Choose from 3 sizes. Perfect for cooking, skincare, and more! Try it today!</p>
+              <div class="btn">
+                <button class="button-two"><h4>PRODUCTS</h4></button>
+              </div>
+          </div>
+          <div class="bedge-image-right">
+              <img src="/components/photos/multiple-tallow-jars.jpeg" alt="Multiple Tallow Jars">
+          </div>
+      </div>
+  
+      <div class="bedge-left">
+          <div class="bedge-text-left">
+              <h4>WE ARE OPEN EVERY SINGLE DAY</h4>
+              <h1>WE OPEN THE DOORS EVERYDAY AT 9:00. COME SAY HELLO!</h1>
+              <p>Our friendly team is here to welcome you with a smile every day at 9:00! Whether you're picking up tallow or just stopping by, we’re happy to help, share tips, or chat about our products. Come say hello, we’d love to meet you!</p>
+              <a class="btn" href="./pages/contact.html">
+                <button class="button-two"><h4>CONTACT</h4></button>
+              </a>
+          </div>
+          <div class="bedge-image-left">
+              <img src="/components/photos/queue-tallow-shp.JPG" alt="Health Promoting Nutrients">
+          </div>
+      </div>
+  </div>
+  </section>
+  
+  <section>
+    <div class="banner-two-positioning">
+    <div class="banner">
+      <div class="overlay"></div>
+      <div class="content">
+          <h1>VISIT OUR TALLOW LANCASHIRE SHOP</h1>
+          <p>Pop in daily from 9am to explore our premium wet-rendered tallow. Our friendly team's here to help with cooking tips, or just a chat. See you soon!</p>
+          <div class="buttons">
+              <button class="btn primary">01257 271917</button>
+              <a class="btn primary" href="./pages/contact.html">Find Us On Map</a>
+          </div>
+      </div>
+  </div>
+  </div>
+  </section>
+
+</section>
+
+
 <section>
   <footer>
     <div class="footer-container">
