--- a/pages/products.html
+++ b/pages/products.html
@@ -58,9 +58,27 @@
           </header>
     </section>
 
+    <section>
+      <!-- banner section -->
+<section>
+  <!-- text on banner -->
+  <div class="hero-banner">
+    <img src="/components/photos/tallow-hero-bg.jpeg" alt="Hero banner">
+    
+    <div class="white-logo-banner">
+      <img src="/components/photos/logo-white-tallow.PNG" alt="Logo">
+    </div>
+    <div class="hero-text">
+      <h1>EXPLORE OUR COOKING TALLOWS</h1>
+    </div>
+    </div>
+</section>
+
+    </section>
+
     <section class="parallax-cards-section">
       <h1>Our Products</h1>
-      <p>Hover over the cards to see the effect</p>
+      <p>Shop Now, Pick Up Today! Your Favorite Products Are Ready for You In-Store!</p>
     
       <div class="cards-container">
         <!-- Card 1 -->
@@ -96,6 +114,23 @@
           </div>
         </div>
       </div>
+    </section>
+
+
+    <section>
+      <div class="banner-two-positioning">
+      <div class="banner">
+        <div class="overlay"></div>
+        <div class="content">
+            <h1>VISIT OUR TALLOW LANCASHIRE SHOP</h1>
+            <p>Pop in daily from 9am to explore our premium wet-rendered tallow. Our friendly team's here to help with cooking tips, or just a chat. See you soon!</p>
+            <div class="buttons">
+                <button class="btn primary">01257 271917</button>
+                <a class="btn primary" href="./pages/contact.html">Find Us On Map</a>
+            </div>
+        </div>
+    </div>
+    </div>
     </section>
 
 
