--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,7 +40,7 @@
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="#" class="menu-link">
+                      <a href="/pages/products.html" class="menu-link">
                         <img src="/components/icones/products.png" alt="PRODUCTS" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
                       </a>
@@ -150,7 +150,7 @@
             <h3>MENU</h3>
             <p><a href="/index.html">HOME</a></p>
             <p><a href="/pages/about.html">ABOUT US</a></p>
-            <p><a href="#">PRODUCTS</a></p>
+            <p><a href="/pages/products.html">PRODUCTS</a></p>
             <p><a href="/pages/contact.html">CONTACT</a></p>
             <br>
             <h3>ON SOCIAL MEDIA:</h3>
