--- a/pages/products.html
+++ b/pages/products.html
@@ -34,13 +34,13 @@
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="/pages/about.html" class="menu-link is-active">
+                      <a href="/pages/about.html" class="menu-link">
                         <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="#" class="menu-link">
+                      <a href="/pages/produts.css" class="menu-link is-active">
                         <img src="/components/icones/products.png" alt="PRODUCTS" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
                       </a>
@@ -63,7 +63,7 @@
 <section>
   <!-- text on banner -->
   <div class="hero-banner">
-    <img src="/components/photos/tallow-hero-bg.jpeg" alt="Hero banner">
+    <img src="/components/photos/tallow-shops.JPG" alt="Hero banner">
     
     <div class="white-logo-banner">
       <img src="/components/photos/logo-white-tallow.PNG" alt="Logo">
@@ -86,7 +86,7 @@
           <div class="container-products container--1">
             <div class="card-text-container">
               <span class="product-name">Large Jar</span>
-              <span class="product-price">15.00£</span>
+              <span class="product-price">£ 15.00</span>
             </div>
             <h5 class="product-size">Size: 350g</h5>
           </div>
@@ -97,7 +97,7 @@
           <div class="container-products container--2">
             <div class="card-text-container">
               <span class="product-name">Medium Jar</span>
-              <span class="product-price">10.00£</span>
+              <span class="product-price">£ 10.00</span>
             </div>
             <h5 class="product-size">Size: 240g</h5>
           </div>
@@ -108,7 +108,7 @@
           <div class="container-products container--3">
             <div class="card-text-container">
               <span class="product-name">Small Jar</span>
-              <span class="product-price">7.00£</span>
+              <span class="product-price">£ 7.00</span>
             </div>
             <h5 class="product-size">Size: 140g</h5>
           </div>
@@ -126,7 +126,7 @@
             <p>Pop in daily from 9am to explore our premium wet-rendered tallow. Our friendly team's here to help with cooking tips, or just a chat. See you soon!</p>
             <div class="buttons">
                 <button class="btn primary">01257 271917</button>
-                <a class="btn primary" href="./pages/contact.html">Find Us On Map</a>
+                <a class="btn primary" href="/pages/contact.html">Find Us On Map</a>
             </div>
         </div>
     </div>
@@ -156,7 +156,7 @@
             <h3>MENU</h3>
             <p><a href="/index.html">HOME</a></p>
             <p><a href="/pages/about.html">ABOUT US</a></p>
-            <p><a href="#">PRODUCTS</a></p>
+            <p><a href="/pages/products.html">PRODUCTS</a></p>
             <p><a href="/pages/contact.html">CONTACT</a></p>
             <br>
             <h3>ON SOCIAL MEDIA:</h3>
