--- a/pages/about.html
+++ b/pages/about.html
@@ -41,7 +41,7 @@
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="#" class="menu-link">
+                  <a href="/pages/products.html" class="menu-link">
                     <img src="/components/icones/products.png" alt="PRODUCTS" class="menu-icon">
                     <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
                   </a>
@@ -192,9 +192,9 @@
             <h4>EXPLORE OUR STORE, FIND THE BEST COOKING TALLOW!</h4>
               <h1>CHECK OUT AVAILABLE PRODUCTS!</h1>
               <p>Pure, nutrient-rich beef tallow, slow-rendered the traditional wet way for superior quality and flavor. Choose from 3 sizes. Perfect for cooking, skincare, and more! Try it today!</p>
-              <div class="btn">
+              <a class="btn" href="/pages/products.html">
                 <button class="button-two"><h4>PRODUCTS</h4></button>
-              </div>
+              </a>
           </div>
           <div class="bedge-image-right">
               <img src="/components/photos/multiple-tallow-jars.jpeg" alt="Multiple Tallow Jars">
@@ -206,7 +206,7 @@
               <h4>WE ARE OPEN EVERY SINGLE DAY</h4>
               <h1>WE OPEN THE DOORS EVERYDAY AT 9:00. COME SAY HELLO!</h1>
               <p>Our friendly team is here to welcome you with a smile every day at 9:00! Whether you're picking up tallow or just stopping by, we’re happy to help, share tips, or chat about our products. Come say hello, we’d love to meet you!</p>
-              <a class="btn" href="./pages/contact.html">
+              <a class="btn" href="/pages/contact.html">
                 <button class="button-two"><h4>CONTACT</h4></button>
               </a>
           </div>
@@ -226,7 +226,7 @@
           <p>Pop in daily from 9am to explore our premium wet-rendered tallow. Our friendly team's here to help with cooking tips, or just a chat. See you soon!</p>
           <div class="buttons">
               <button class="btn primary">01257 271917</button>
-              <a class="btn primary" href="./pages/contact.html">Find Us On Map</a>
+              <a class="btn primary" href="/pages/contact.css">Find Us On Map</a>
           </div>
       </div>
   </div>
@@ -256,7 +256,7 @@
             <h3>MENU</h3>
             <p><a href="/index.html">HOME</a></p>
             <p><a href="/pages/about.html">ABOUT US</a></p>
-            <p><a href="#">PRODUCTS</a></p>
+            <p><a href="/pages/products.html">PRODUCTS</a></p>
             <p><a href="/pages/contact.html">CONTACT</a></p>
             <br>
             <h3>ON SOCIAL MEDIA:</h3>
