implemented links to products

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </a>
             </li>
             <li class="menu-item">
-              <a href="#" class="menu-link">
+              <a href="/pages/products.html" class="menu-link">
                 <img src="/components/icones/products.png" alt="ABOUT US" class="menu-icon">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
               </a>
@@ -74,9 +74,9 @@
         </a>
         
         <!-- Button Two  -->
-        <div class="btn">
+        <a class="btn" href="/pages/products.html">
           <button class="button-two"><h4>PRODUCTS</h4></button>
-        </div>
+        </a>
       </div>
     </div>
     </div>
@@ -143,9 +143,9 @@
           <h4>EXPLORE OUR STORE, FIND THE BEST COOKING TALLOW!</h4>
             <h1>CHECK OUT AVAILABLE PRODUCTS!</h1>
             <p>Pure, nutrient-rich beef tallow, slow-rendered the traditional wet way for superior quality and flavor. Choose from 3 sizes. Perfect for cooking, skincare, and more! Try it today!</p>
-            <div class="btn">
+            <a class="btn" href="/pages/products.html">
               <button class="button-two"><h4>PRODUCTS</h4></button>
-            </div>
+            </a>
         </div>
         <div class="bedge-image-right">
             <img src="/components/photos/multiple-tallow-jars.jpeg" alt="Multiple Tallow Jars">
@@ -204,7 +204,7 @@
             <h3>MENU</h3>
             <p><a href="/index.html">HOME</a></p>
             <p><a href="/pages/about.html">ABOUT US</a></p>
-            <p><a href="#">PRODUCTS</a></p>
+            <p><a href="/pages/products.html">PRODUCTS</a></p>
             <p><a href="/pages/contact.html">CONTACT</a></p>
             <br>
             <h3>ON SOCIAL MEDIA:</h3>
