--- a/pages/about.html
+++ b/pages/about.html
@@ -225,7 +225,7 @@
           <h1>VISIT OUR TALLOW LANCASHIRE SHOP</h1>
           <p>Pop in daily from 9am to explore our premium wet-rendered tallow. Our friendly team's here to help with cooking tips, or just a chat. See you soon!</p>
           <div class="buttons">
-              <button class="btn primary">01257 271917</button>
+              <a class="btn primary" href="tel:01257 271917">01257 271917</a>
               <a class="btn primary" href="/pages/contact.css">Find Us On Map</a>
           </div>
       </div>
