--- a/pages/products.html
+++ b/pages/products.html
@@ -63,13 +63,13 @@
 <section>
   <!-- text on banner -->
   <div class="hero-banner">
-    <img src="/components/photos/tallow-shops.JPG" alt="Hero banner">
+    <img src="/components/photos/tallow-shop.jpeg" alt="Hero banner">
     
     <div class="white-logo-banner">
       <img src="/components/photos/logo-white-tallow.PNG" alt="Logo">
     </div>
     <div class="hero-text">
-      <h1>EXPLORE OUR COOKING TALLOWS</h1>
+      <h1>EXPLORE OUR RICH & FLAVORFUL COOKING TALLOWS – DEEP IN TASTE, PURE IN QUALITY!</h1>
     </div>
     </div>
 </section>
