--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <h4>EXPLORE OUR STORE, FIND THE BEST COOKING TALLOW!</h4>
             <h1>CHECK OUT AVAILABLE PRODUCTS!</h1>
             <p>Pure, nutrient-rich beef tallow, slow-rendered the traditional wet way for superior quality and flavor. Choose from 3 sizes. Perfect for cooking, skincare, and more! Try it today!</p>
-            <a class="btn" href="/pages/products.html">
+            <a class="btn" href="./pages/products.html">
               <button class="button-two"><h4>PRODUCTS</h4></button>
             </a>
         </div>
