--- a/pages/products.html
+++ b/pages/products.html
@@ -88,7 +88,7 @@
               <span class="product-name">Large Jar</span>
               <span class="product-price">£ 15.00</span>
             </div>
-            <h5 class="product-size">Size: 350g</h5>
+            <h5 class="product-size">Size: 1l</h5>
           </div>
         </div>
     
@@ -99,7 +99,7 @@
               <span class="product-name">Medium Jar</span>
               <span class="product-price">£ 10.00</span>
             </div>
-            <h5 class="product-size">Size: 240g</h5>
+            <h5 class="product-size">Size: 50cl</h5>
           </div>
         </div>
     
@@ -110,7 +110,7 @@
               <span class="product-name">Small Jar</span>
               <span class="product-price">£ 7.00</span>
             </div>
-            <h5 class="product-size">Size: 140g</h5>
+            <h5 class="product-size">Size: 30cl</h5>
           </div>
         </div>
       </div>
