--- a/pages/about.html
+++ b/pages/about.html
@@ -206,7 +206,7 @@
               <h4>WE ARE OPEN EVERY SINGLE DAY</h4>
               <h1>WE OPEN THE DOORS EVERYDAY AT 9:00. COME SAY HELLO!</h1>
               <p>Our friendly team is here to welcome you with a smile every day at 9:00! Whether you're picking up tallow or just stopping by, we’re happy to help, share tips, or chat about our products. Come say hello, we’d love to meet you!</p>
-              <a class="btn" href="/pages/contact.html">
+              <a class="btn" href="./contact.html">
                 <button class="button-two"><h4>CONTACT</h4></button>
               </a>
           </div>
