--- a/pages/about.html
+++ b/pages/about.html
@@ -226,7 +226,7 @@
           <p>Pop in daily from 9am to explore our premium wet-rendered tallow. Our friendly team's here to help with cooking tips, or just a chat. See you soon!</p>
           <div class="buttons">
               <a class="btn primary" href="tel:01257 271917">01257 271917</a>
-              <a class="btn primary" href="/pages/contact.css">Find Us On Map</a>
+              <a class="btn primary" href="./contact.html">Find Us On Map</a>
           </div>
       </div>
   </div>
