--- a/pages/contact.html
+++ b/pages/contact.html
@@ -96,7 +96,7 @@
     <br>
     <br>
     <h1> Contact Us </h1>
-    <form action="#" method="post" id="contact_form">
+    <form action="https://formsubmit.co/your-email@example.com" method="post" id="contact_form">
       <div class="name">
         <label for="name"></label>
         <input type="text" placeholder="My name is" name="name" id="name_input" required>
