--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,19 +34,19 @@
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="/pages/about.html" class="menu-link">
+                      <a href="./pages/about.html" class="menu-link">
                         <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="/pages/products.html" class="menu-link">
+                      <a href="./pages/products.html" class="menu-link">
                         <img src="/components/icones/products.png" alt="PRODUCTS" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="#" class="menu-link is-active">
+                      <a href="./contact.html" class="menu-link is-active">
                         <img src="/components/icones/location.png" alt="CONTACT/LOCATION" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
                       </a>
