--- a/pages/products.html
+++ b/pages/products.html
@@ -40,7 +40,7 @@
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="/pages/produts.css" class="menu-link is-active">
+                      <a href="/pages/produts.html" class="menu-link is-active">
                         <img src="/components/icones/products.png" alt="PRODUCTS" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
                       </a>
