--- a/pages/about.html
+++ b/pages/about.html
@@ -41,7 +41,7 @@
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="./pages/products.html" class="menu-link">
+                  <a href="./products.html" class="menu-link">
                     <img src="/components/icones/products.png" alt="PRODUCTS" class="menu-icon">
                     <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
                   </a>
