changes of email

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -164,7 +164,7 @@
         <div class="footer-section">
             <h3>CONTACT US</h3>
             <p><strong>PHONE:</strong> 01257 271917</p>
-            <p><strong>E-MAIL:</strong> <a href="mailto:tallowlancashire">tallow@gmail.com</a></p>
+            <!-- <p><strong>E-MAIL:</strong> <a href="mailto:tallowlancashire">tallow@gmail.com</a></p> -->
             <br>
             <h3>LOCATION</h3>
             <p> 275 Eaves Ln<br> Chorley PR6 0EY</p>
