--- a/pages/about.html
+++ b/pages/about.html
@@ -280,7 +280,7 @@
           </div>         
     </div>
     <div class="footer-bottom">
-        <p>© 2025 Tallow Lancashire Co</p>
+        <p>© 2025 Tallow Lancashire Co | Made with &#10084; Martyna Wloka</p>
     </div>
 </footer>
 </section>
