--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Tallow Lancashire </title>
   <link rel="stylesheet" href="/pages/navbar.css">
   <link rel="stylesheet" href="/pages/fonts.css">
   <link rel="stylesheet" href="style.css">
@@ -173,7 +173,7 @@
   <div class="banner">
     <div class="overlay"></div>
     <div class="content">
-        <h1>VISIT OUR TALLOW LANCASHIRE SHOP</h1>
+        <h1>VISIT OUR LANCASHIRE TALLOW SHOP</h1>
         <p>Pop in daily from 9am to explore our premium wet-rendered tallow. Our friendly team's here to help with cooking tips, or just a chat. See you soon!</p>
         <div class="buttons">
             <a class="btn primary" href="tel:01257 271917">01257 271917</a>
