--- a/pages/products.html
+++ b/pages/products.html
@@ -86,7 +86,7 @@
           <div class="container-products container--1">
             <div class="card-text-container">
               <span class="product-name">Large Jar</span>
-              <span class="product-price">£ 15.00</span>
+              <span class="product-price">Coming soon</span>
             </div>
             <h5 class="product-size">Size: 1l</h5>
           </div>
@@ -97,7 +97,7 @@
           <div class="container-products container--2">
             <div class="card-text-container">
               <span class="product-name">Medium Jar</span>
-              <span class="product-price">£ 10.00</span>
+              <span class="product-price">£ 15.00</span>
             </div>
             <h5 class="product-size">Size: 50cl</h5>
           </div>
@@ -108,7 +108,7 @@
           <div class="container-products container--3">
             <div class="card-text-container">
               <span class="product-name">Small Jar</span>
-              <span class="product-price">£ 7.00</span>
+              <span class="product-price">Coming soon</span>
             </div>
             <h5 class="product-size">Size: 30cl</h5>
           </div>
@@ -122,7 +122,7 @@
       <div class="banner">
         <div class="overlay"></div>
         <div class="content">
-            <h1>VISIT OUR TALLOW LANCASHIRE SHOP</h1>
+            <h1>VISIT OUR LANCASHIRE TALLOW SHOP</h1>
             <p>Pop in daily from 9am to explore our premium wet-rendered tallow. Our friendly team's here to help with cooking tips, or just a chat. See you soon!</p>
             <div class="buttons">
               <a class="btn primary" href="tel:01257 271917">01257 271917</a>
