--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
             <h3>ON SOCIAL MEDIA:</h3>
           <div class="social-icons">
               <a href="https://www.facebook.com/profile.php?id=61569199092253"><i class="fab fa-facebook-f fa-1.5x"></i></a>
-              <a href="#"><i class="fab fa-instagram fa-1.5x"></i></a>
-              <a href="#"><i class="fab fa-youtube fa-1.5x"></i></a>
+              <!-- <a href="#"><i class="fab fa-instagram fa-1.5x"></i></a>
+              <a href="#"><i class="fab fa-youtube fa-1.5x"></i></a> -->
           </div>
         </div>
 
