--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,23 +34,19 @@
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="./pages/about.html" class="menu-link">
+                      <a href="/pages/about.html" class="menu-link">
                         <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="./pages/products.html" class="menu-link">
+                      <a href="/pages/products.html" class="menu-link">
                         <img src="/components/icones/products.png" alt="PRODUCTS" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
                       </a>
                     </li>
                     <li class="menu-item">
-<<<<<<< Updated upstream
-                      <a href="./contact.html" class="menu-link is-active">
-=======
                       <a href="/pages/contact.html" class="menu-link is-active">
->>>>>>> Stashed changes
                         <img src="/components/icones/location.png" alt="CONTACT/LOCATION" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
                       </a>
@@ -77,12 +73,12 @@
             
             <h2>OPENING HOURS</h2>
             <ul>
-              <li><p>MONDAY: 9am - 5pm</p></li>
-              <li><p>TUESDAY: 9am - 5pm</p></li>
-              <li><p>WEDNESDAY: 9am - 5pm</p></li>
-              <li><p>THURSDAY: 9am - 5pm</p></li>
-              <li><p>FRIDAY: 9am - 5pm</p></li>
-              <li><p>SATURDAY: 9am - 5pm</p></li>
+              <li><p>MONDAY: 9am - 7pm</p></li>
+              <li><p>TUESDAY: 9am - 7pm</p></li>
+              <li><p>WEDNESDAY: 9am - 7pm</p></li>
+              <li><p>THURSDAY: 9am - 7pm</p></li>
+              <li><p>FRIDAY: 9am - 7pm</p></li>
+              <li><p>SATURDAY: 9am - 7pm</p></li>
               <li><p>SUNDAY: 10am - 16pm</p></li>
             </ul>
             <br>
@@ -160,8 +156,8 @@
             <h3>ON SOCIAL MEDIA:</h3>
           <div class="social-icons">
               <a href="https://www.facebook.com/profile.php?id=61569199092253"><i class="fab fa-facebook-f fa-1.5x"></i></a>
-              <a href="#"><i class="fab fa-instagram fa-1.5x"></i></a>
-              <a href="#"><i class="fab fa-tiktok fa-1.5x"></i></a>
+              <!-- <a href="#"><i class="fab fa-instagram fa-1.5x"></i></a>
+              <a href="#"><i class="fab fa-tiktok fa-1.5x"></i></a> -->
           </div>
         </div>
 
