--- a/pages/about.html
+++ b/pages/about.html
@@ -35,19 +35,19 @@
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="./pages/about.html" class="menu-link is-active">
+                  <a href="/pages/about.html" class="menu-link is-active">
                     <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
                     <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="./products.html" class="menu-link">
+                  <a href="/products.html" class="menu-link">
                     <img src="/components/icones/products.png" alt="PRODUCTS" class="menu-icon">
                     <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="./pages/contact.html" class="menu-link">
+                  <a href="/pages/contact.html" class="menu-link">
                     <img src="/components/icones/location.png" alt="CONTACT/LOCATION" class="menu-icon">
                     <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
                   </a>
@@ -222,7 +222,7 @@
     <div class="banner">
       <div class="overlay"></div>
       <div class="content">
-          <h1>VISIT OUR TALLOW LANCASHIRE SHOP</h1>
+          <h1>VISIT OUR LANCASHIRE TALLOW SHOP</h1>
           <p>Pop in daily from 9am to explore our premium wet-rendered tallow. Our friendly team's here to help with cooking tips, or just a chat. See you soon!</p>
           <div class="buttons">
               <a class="btn primary" href="tel:01257 271917">01257 271917</a>
@@ -261,9 +261,9 @@
             <br>
             <h3>ON SOCIAL MEDIA:</h3>
           <div class="social-icons">
-              <a href="https://www.facebook.com/profile.php?id=61569199092253""><i class="fab fa-facebook-f fa-1.5x"></i></a>
-              <a href="#"><i class="fab fa-instagram fa-1.5x"></i></a>
-              <a href="#"><i class="fab fa-youtube fa-1.5x"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61569199092253"><i class="fab fa-facebook-f fa-1.5x"></i></a>
+              <!-- <a href="#"><i class="fab fa-instagram fa-1.5x"></i></a>
+              <a href="#"><i class="fab fa-youtube fa-1.5x"></i></a> -->
           </div>
         </div>
 
