--- a/pages/about.html
+++ b/pages/about.html
@@ -41,7 +41,7 @@
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="/products.html" class="menu-link">
+                  <a href="/pages/products.html" class="menu-link">
                     <img src="/components/icones/products.png" alt="PRODUCTS" class="menu-icon">
                     <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
                   </a>
@@ -274,13 +274,19 @@
             <br>
             <h3>LOCATION</h3>
             <p> 275 Eaves Ln<br> Chorley PR6 0EY</p>
+            <br>
+            <h3>TOGETHER WITH EARTHSGIFTS!</h3>
+            <div class="social-icons">
+                <a href="https://www.tiktok.com/@earthsgifts1111?is_from_webapp=1&sender_device=pc"><i class="fab fa-tiktok fa-1.5x"></i></a>
 
 
             </div>
           </div>         
     </div>
     <div class="footer-bottom">
+      <div class="footer-section">
         <p>© 2025 Tallow Lancashire Co | Made with &#10084; Martyna Wloka</p>
+      </div>
     </div>
 </footer>
 </section>
