--- a/pages/contact.html
+++ b/pages/contact.html
@@ -168,13 +168,19 @@
             <br>
             <h3>LOCATION</h3>
             <p> 275 Eaves Ln<br> Chorley PR6 0EY</p>
+            <br>
+            <h3>TOGETHER WITH EARTHSGIFTS!</h3>
+            <div class="social-icons">
+                <a href="https://www.tiktok.com/@earthsgifts1111?is_from_webapp=1&sender_device=pc"><i class="fab fa-tiktok fa-1.5x"></i></a>
 
 
             </div>
           </div>         
     </div>
     <div class="footer-bottom">
-      <p>© 2025 Tallow Lancashire Co | Made with &#10084; Martyna Wloka</p>
+      <div class="footer-section">
+        <p>© 2025 Tallow Lancashire Co | Made with &#10084; Martyna Wloka</p>
+      </div>
     </div>
 </footer>
 </section>
