--- a/pages/products.html
+++ b/pages/products.html
@@ -184,8 +184,9 @@
           </div>         
     </div>
     <div class="footer-bottom">
-      <p>© 2025 Tallow Lancashire Co | Made with &#10084; Martyna Wloka</p>
-    </div>
+      <div class="footer-section">
+        <p>© 2025 Tallow Lancashire Co | Made with &#10084; Martyna Wloka</p>
+      </div>
 </footer>
 </section>
     <script src="/app.js"></script>
