--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <h3>LOCATION</h3>
             <p> 275 Eaves Ln<br> Chorley PR6 0EY</p>
             <br>
-            <h3>TOGETHER WITH EARTHSGIFTS!</h3>
+            <h3>TOGETHER WITH EARTHSGIFTS:</h3>
             <div class="social-icons">
                 <a href="https://www.tiktok.com/@earthsgifts1111?is_from_webapp=1&sender_device=pc"><i class="fab fa-tiktok fa-1.5x"></i></a>
 
