changing jpg png to webp

--- a/pages/products.html
+++ b/pages/products.html
@@ -20,7 +20,7 @@
               <nav class="navbar container">
                 <div class="navbar-left">
                 <ul class="menu-list">
-                <div class="logo-black"> <img src="/components/photos/logo-white.png" alt="Logo Black" style="width: 60px; height: auto;"></div>
+                <div class="logo-black"> <img src="/components/photos/logo-white.webp" alt="Logo Black" style="width: 60px; height: auto;"></div>
                 <a href="../index.html" class="brand"> TALLOW LANCASHIRE CO</a>
               </ul>
               </div>
@@ -29,25 +29,25 @@
         
                     <li class="menu-item">
                       <a href="../index.html" class="menu-link">
-                        <img src="/components/icones/home.png" alt="Home" class="menu-icon">
+                        <img src="/components/icones/home.webp" alt="Home" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Home</span>
                       </a>
                     </li>
                     <li class="menu-item">
                       <a href="/pages/about.html" class="menu-link">
-                        <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
+                        <img src="/components/icones/about.webp" alt="ABOUT US" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
                       </a>
                     </li>
                     <li class="menu-item">
                       <a href="/pages/produts.html" class="menu-link is-active">
-                        <img src="/components/icones/products.png" alt="PRODUCTS" class="menu-icon">
+                        <img src="/components/icones/products.webp" alt="PRODUCTS" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
                       </a>
                     </li>
                     <li class="menu-item">
                       <a href="/pages/contact.html" class="menu-link">
-                        <img src="/components/icones/location.png" alt="CONTACT/LOCATION" class="menu-icon">
+                        <img src="/components/icones/location.webp" alt="CONTACT/LOCATION" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
                       </a>
                     </li>
@@ -63,10 +63,10 @@
 <section>
   <!-- text on banner -->
   <div class="hero-banner">
-    <img src="/components/photos/tallow-shop.jpeg" alt="Hero banner">
+    <img src="/components/photos/tallow-shop.webp" alt="Hero banner">
     
     <div class="white-logo-banner">
-      <img src="/components/photos/logo-white-tallow.PNG" alt="Logo">
+      <img src="/components/photos/logo-white-tallow.webp" alt="Logo">
     </div>
     <div class="hero-text">
       <h1>EXPLORE OUR RICH & FLAVORFUL COOKING TALLOWS – DEEP IN TASTE, PURE IN QUALITY!</h1>
