--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav class="navbar container">
         <div class="navbar-left">
         <ul class="menu-list">
-        <div class="logo-black"> <img src="/components/photos/logo-white.png" alt="Logo Black" style="width: 60px; height: auto;"></div>
+        <div class="logo-black"> <img src="/components/photos/logo-white.webp" alt="Logo Black" style="width: 60px; height: auto;"></div>
         <a href="./index.html" class="brand"> TALLOW LANCASHIRE CO</a>
       </ul>
       </div>
@@ -26,25 +26,25 @@
 
             <li class="menu-item">
               <a href="#" class="menu-link is-active">
-                <img src="/components/icones/home.png" alt="Home" class="menu-icon">
+                <img src="/components/icones/home.webp" alt="Home" class="menu-icon">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Home</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="/pages/about.html" class="menu-link">
-                <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
+                <img src="/components/icones/about.webp" alt="ABOUT US" class="menu-icon">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="/pages/products.html" class="menu-link">
-                <img src="/components/icones/products.png" alt="ABOUT US" class="menu-icon">
+                <img src="/components/icones/products.webp" alt="ABOUT US" class="menu-icon">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="/pages/contact.html" class="menu-link">
-                <img src="/components/icones/location.png" alt="ABOUT US" class="menu-icon">
+                <img src="/components/icones/location.webp" alt="ABOUT US" class="menu-icon">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
               </a>
             </li>
@@ -58,10 +58,10 @@
 <section>
   <!-- text on banner -->
   <div class="hero-banner">
-    <img src="/components/photos/tallow-hero-bg.jpeg" alt="Hero banner">
+    <img src="/components/photos/tallow-hero-bg.webp" alt="Hero banner">
     
     <div class="white-logo-banner">
-      <img src="/components/photos/logo-white-tallow.PNG" alt="Logo">
+      <img src="/components/photos/logo-white-tallow.webp" alt="Logo">
     </div>
     <div class="hero-text">
       <h1>LANCASHIRE TALLOW 
@@ -93,7 +93,7 @@
       <div class="figure-item">
         <figure class="image-block">
           <h1>ORGANIC TALLOW</h1>
-          <img src="/components/photos/tallow-cubes.jpeg" alt="Tallow cubes">
+          <img src="/components/photos/tallow-cubes.webp" alt="Tallow cubes">
           <figcaption>
             <h3>More Info</h3>
             <p>The tallow comes from cattle raised on organic farms, where the animals are pasture-raised, fed 100% organic feed (free from synthetic pesticides, herbicides, and GMOs), and without antibiotics or hormones.</p>
@@ -104,7 +104,7 @@
       <div class="figure-item">
         <figure class="image-block">
           <h1>PASTEURISED BEEF</h1>
-          <img src="./components/photos/pastured-rasied-beef.jpeg" alt="Pastured Beef">
+          <img src="./components/photos/pastured-rasied-beef.webp" alt="Pastured Beef">
           <figcaption>
             <h3>More Info</h3>
             <p>Raised Naturally, Nourished Sustainably. Our cattle graze on local open pastures, ensuring the highest quality, nutrient-rich beef. Taste the difference of truly ethical and wholesome farming!</p>
@@ -115,7 +115,7 @@
       <div class="figure-item"> 
         <figure class="image-block">
           <h1>HIGH SMOKE POINT</h1>
-          <img src="/components/photos/high-smoke-point.jpeg" alt="High Smoke Point">
+          <img src="/components/photos/high-smoke-point.webp" alt="High Smoke Point">
           <figcaption>
             <h3>More Info</h3>
             <p>Our tallow handles high heat like a professional, making it ideal for frying, searing, roasting, baking and more—without breaking down or losing its nutritional benefits and without smoked kitchen.</p>
@@ -129,7 +129,7 @@
 <!-- banner 2 -->
 <section>
   <div class="hero-banner">
-    <img src="/components/photos/girl-in-shop.jpg" alt="Girl in the shop">
+    <img src="/components/photos/girl-in-shop.webp" alt="Girl in the shop">
     <div class="hero-text">
       <h1>THE BEST COOKING TALLOW SHOP</h1>
         </div>
@@ -148,7 +148,7 @@
             </a>
         </div>
         <div class="bedge-image-right">
-            <img src="/components/photos/multiple-tallow-jars.jpeg" alt="Multiple Tallow Jars">
+            <img src="/components/photos/multiple-tallow-jars.webp" alt="Multiple Tallow Jars">
         </div>
     </div>
 
@@ -162,7 +162,7 @@
             </a>
         </div>
         <div class="bedge-image-left">
-            <img src="/components/photos/queue-tallow-shp.JPG" alt="Health Promoting Nutrients">
+            <img src="/components/photos/queue-tallow-shp.webp" alt="Health Promoting Nutrients">
         </div>
     </div>
 </div>
