--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,7 +20,7 @@
               <nav class="navbar container">
                 <div class="navbar-left">
                 <ul class="menu-list">
-                <div class="logo-black"> <img src="/components/photos/logo-white.png" alt="Logo Black" style="width: 60px; height: auto;"></div>
+                <div class="logo-black"> <img src="/components/photos/logo-white.webp" alt="Logo Black" style="width: 60px; height: auto;"></div>
                 <a href="../index.html" class="brand"> TALLOW LANCASHIRE CO</a>
               </ul>
               </div>
@@ -29,25 +29,25 @@
         
                     <li class="menu-item">
                       <a href="../index.html" class="menu-link">
-                        <img src="/components/icones/home.png" alt="Home" class="menu-icon">
+                        <img src="/components/icones/home.webp" alt="Home" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Home</span>
                       </a>
                     </li>
                     <li class="menu-item">
                       <a href="/pages/about.html" class="menu-link">
-                        <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
+                        <img src="/components/icones/about.webp" alt="ABOUT US" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
                       </a>
                     </li>
                     <li class="menu-item">
                       <a href="/pages/products.html" class="menu-link">
-                        <img src="/components/icones/products.png" alt="PRODUCTS" class="menu-icon">
+                        <img src="/components/icones/products.webp" alt="PRODUCTS" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
                       </a>
                     </li>
                     <li class="menu-item">
                       <a href="/pages/contact.html" class="menu-link is-active">
-                        <img src="/components/icones/location.png" alt="CONTACT/LOCATION" class="menu-icon">
+                        <img src="/components/icones/location.webp" alt="CONTACT/LOCATION" class="menu-icon">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
                       </a>
                     </li>
