--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tallow Lancashire </title>
+  <title>Tallow Lancashire Co </title>
+  <meta name="description" content="Tallow Lancashire Co - Premium organic beef tallow from pasture-raised cattle. Perfect for high-heat cooking with health benefits. Visit our shop in Chorley or browse our products online.">
   <link rel="stylesheet" href="/pages/navbar.css">
   <link rel="stylesheet" href="/pages/fonts.css">
   <link rel="stylesheet" href="style.css">
@@ -19,6 +20,7 @@
         <ul class="menu-list">
         <div class="logo-black"> <img src="/components/photos/logo-white.webp" alt="Logo Black" style="width: 60px; height: auto;"></div>
         <a href="./index.html" class="brand"> TALLOW LANCASHIRE CO</a>
+        <meta name="description" content="Shop premium organic beef cooking tallow at Tallow Lancashire Co. Our pasture-raised tallow has a high smoke point for perfect cooking. Visit us in Chorley.">
       </ul>
       </div>
         <div class="menu" id="menu">
