--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
+    <meta name="description" content="Discover Tallow Lancashire Co's story - a family-owned business crafting premium organic cooking tallow from pasture-raised beef using traditional wet-rendering methods in Chorley.">
     <link rel="stylesheet" href="/pages/navbar.css">
     <link rel="stylesheet" href="/pages/fonts.css">
     <link rel="stylesheet" href="../style.css">
