--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Us</title>
+    <meta name="description" content="Contact Tallow Lancashire Co - Visit our Chorley shop at 275 Eaves Ln or reach us at 01257 271917. Open daily 9am-7pm for premium organic cooking tallow products.">
     <link rel="stylesheet" href="/pages/navbar.css">
     <link rel="stylesheet" href="/pages/fonts.css">
     <link rel="stylesheet" href="../style.css">
