--- a/pages/products.html
+++ b/pages/products.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Products</title>
+        <meta name="description" content="Premium organic beef tallow products from Tallow Lancashire Co - Available in 3 sizes (30cl, 50cl, 1L). Traditional wet-rendered, pasture-raised, perfect for cooking.">
         <link rel="stylesheet" href="/pages/navbar.css">
         <link rel="stylesheet" href="/pages/fonts.css">
         <link rel="stylesheet" href="../style.css">
